# playground

./: .gitignore  README.md
code/dotnet/BuberBreakfast/: BuberBreakfast.sln  README.md
code/dotnet/HotChoc/: .gitignore  Dockerfile  HotChoc.csproj  Program.cs  Query.cs  docker-compose.tracing.yaml  docker-compose.yaml  hotchoc-deployment.yaml  hotchoc-service.yaml
code/dotnet/test/: README.md
code/elixir/tutorial/: note.md
code/go/codebuild-create-project/: README.md  go.mod  go.sum  main.go
code/javascript/cypress/: README.md  spec.cy.js
code/python/jenkins/: build_match_branch.py  remove-failed.py
code/rust/term-poc/: Cargo.toml  README.md  index.html
code/rust/term-poc/src/: main.rs
code/script/: aws-list-profile-group.sh  aws-secret-getter.sh  error-check-retry.sh
code/terraform/eks_managed/: test-s3-role.yaml
cookbook/docker/erp/: dolibarr.yaml  idurar.yaml  odoo.sh
cookbook/docker/jenkins-inbound-agent/: Dockerfile
cookbook/docker/jenkins-mock-upgrade/: Dockerfile  README.md  update.sh
cookbook/docker/sftp-test/: Dockerfile  kube.yaml
cookbook/docker/stress-test/: kube.yaml
cookbook/docker/stress-test-multi/: fortio.yaml  run.sh  stress.yaml
cookbook/k3s/: 1.k3s.md  2.metalLB.md  3.cloudflare.md  4.base-kube.md  README.md  cloudflare.yaml  cloudflared.yaml
cookbook/kubernetes/0-playbooks/: cloudflared.yaml  exatorrent.yaml  filebrowser.yaml  kubectl-in-pod.yaml  memos.yaml  syncthing.yaml
cookbook/kubernetes/cert-manager/: README.md
cookbook/stable_diffusion/: README.md  invokeAI.md
cookbook/stress-test/: Dockerfile
(+334 files in other folders)
