[package]
name = "timber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.16.1"
futures-util = "0.3.30"
nix = { version = "0.28.0", features = ["process", "fs", "term", "ioctl"] }
# termios = "0.3.3"
